// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LQIP > blurhash LQIP is supported 1`] = `
"import { findMatchingImage } from '@responsive-image/core';
import { decode2url } from '@responsive-image/core/blurhash/decode';
const images = [{
  url: __webpack_public_path__ + "assets/image-640w.jpg",
  width: 640,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-640w.webp",
  width: 640,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-750w.jpg",
  width: 750,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-750w.webp",
  width: 750,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-828w.jpg",
  width: 828,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-828w.webp",
  width: 828,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-1080w.jpg",
  width: 1080,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-1080w.webp",
  width: 1080,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-1200w.jpg",
  width: 1200,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-1200w.webp",
  width: 1200,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-1920w.jpg",
  width: 1920,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-1920w.webp",
  width: 1920,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-2048w.jpg",
  width: 2048,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-2048w.webp",
  width: 2048,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-3840w.jpg",
  width: 3840,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-3840w.webp",
  width: 3840,
  format: 'webp'
}];
export default {
  imageTypes: [
    'jpeg',
    'webp'
  ],
  availableWidths: [
    640,
    750,
    828,
    1080,
    1200,
    1920,
    2048,
    3840
  ],
  aspectRatio: 1.5,
  imageUrlFor: (w, f) => findMatchingImage(images, w, f ?? 'jpeg')?.url,
  lqip: {
    bgImage: () => decode2url('M53dVIR8D8*Ft2MpoxylRoRlHYniyBRQbu', 5, 3),
    attribute: 'bh:5:3:M53dVIR8D8*Ft2MpoxylRoRlHYniyBRQbu'
  }
}"
`;

exports[`LQIP > color LQIP is supported 1`] = `
"import { findMatchingImage } from '@responsive-image/core';
import '/fixtures/image.jpg.css!=!@responsive-image/webpack/lqip/color-css!/fixtures/image.jpg?className=ri-dyn-0';
const images = [{
  url: __webpack_public_path__ + "assets/image-640w.jpg",
  width: 640,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-640w.webp",
  width: 640,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-750w.jpg",
  width: 750,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-750w.webp",
  width: 750,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-828w.jpg",
  width: 828,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-828w.webp",
  width: 828,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-1080w.jpg",
  width: 1080,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-1080w.webp",
  width: 1080,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-1200w.jpg",
  width: 1200,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-1200w.webp",
  width: 1200,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-1920w.jpg",
  width: 1920,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-1920w.webp",
  width: 1920,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-2048w.jpg",
  width: 2048,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-2048w.webp",
  width: 2048,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-3840w.jpg",
  width: 3840,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-3840w.webp",
  width: 3840,
  format: 'webp'
}];
export default {
  imageTypes: [
    'jpeg',
    'webp'
  ],
  availableWidths: [
    640,
    750,
    828,
    1080,
    1200,
    1920,
    2048,
    3840
  ],
  aspectRatio: 1.5,
  imageUrlFor: (w, f) => findMatchingImage(images, w, f ?? 'jpeg')?.url,
  lqip: {
    'class': 'ri-dyn-0'
  }
}"
`;

exports[`LQIP > color LQIP with inline styles is supported 1`] = `
"import { findMatchingImage } from '@responsive-image/core';
import inlineStyles from '@responsive-image/webpack/lqip/color-css!/fixtures/image.jpg?className=ri-dyn-0&inline=1';
const images = [{
  url: __webpack_public_path__ + "assets/image-640w.jpg",
  width: 640,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-640w.webp",
  width: 640,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-750w.jpg",
  width: 750,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-750w.webp",
  width: 750,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-828w.jpg",
  width: 828,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-828w.webp",
  width: 828,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-1080w.jpg",
  width: 1080,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-1080w.webp",
  width: 1080,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-1200w.jpg",
  width: 1200,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-1200w.webp",
  width: 1200,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-1920w.jpg",
  width: 1920,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-1920w.webp",
  width: 1920,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-2048w.jpg",
  width: 2048,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-2048w.webp",
  width: 2048,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-3840w.jpg",
  width: 3840,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-3840w.webp",
  width: 3840,
  format: 'webp'
}];
export default {
  imageTypes: [
    'jpeg',
    'webp'
  ],
  availableWidths: [
    640,
    750,
    828,
    1080,
    1200,
    1920,
    2048,
    3840
  ],
  aspectRatio: 1.5,
  imageUrlFor: (w, f) => findMatchingImage(images, w, f ?? 'jpeg')?.url,
  lqip: {
    inlineStyles: inlineStyles
  }
}"
`;

exports[`LQIP > inline LQIP is supported 1`] = `
"import { findMatchingImage } from '@responsive-image/core';
import '/fixtures/image.jpg.css!=!@responsive-image/webpack/lqip/inline-css!/fixtures/image.jpg?className=ri-dyn-0&targetPixels=60';
const images = [{
  url: __webpack_public_path__ + "assets/image-640w.jpg",
  width: 640,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-640w.webp",
  width: 640,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-750w.jpg",
  width: 750,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-750w.webp",
  width: 750,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-828w.jpg",
  width: 828,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-828w.webp",
  width: 828,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-1080w.jpg",
  width: 1080,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-1080w.webp",
  width: 1080,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-1200w.jpg",
  width: 1200,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-1200w.webp",
  width: 1200,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-1920w.jpg",
  width: 1920,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-1920w.webp",
  width: 1920,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-2048w.jpg",
  width: 2048,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-2048w.webp",
  width: 2048,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-3840w.jpg",
  width: 3840,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-3840w.webp",
  width: 3840,
  format: 'webp'
}];
export default {
  imageTypes: [
    'jpeg',
    'webp'
  ],
  availableWidths: [
    640,
    750,
    828,
    1080,
    1200,
    1920,
    2048,
    3840
  ],
  aspectRatio: 1.5,
  imageUrlFor: (w, f) => findMatchingImage(images, w, f ?? 'jpeg')?.url,
  lqip: {
    'class': 'ri-dyn-0'
  }
}"
`;

exports[`LQIP > inline LQIP with inline styles is supported 1`] = `
"import { findMatchingImage } from '@responsive-image/core';
import inlineStyles from '@responsive-image/webpack/lqip/inline-css!/fixtures/image.jpg?&targetPixels=60&inline=1';
const images = [{
  url: __webpack_public_path__ + "assets/image-640w.jpg",
  width: 640,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-640w.webp",
  width: 640,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-750w.jpg",
  width: 750,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-750w.webp",
  width: 750,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-828w.jpg",
  width: 828,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-828w.webp",
  width: 828,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-1080w.jpg",
  width: 1080,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-1080w.webp",
  width: 1080,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-1200w.jpg",
  width: 1200,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-1200w.webp",
  width: 1200,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-1920w.jpg",
  width: 1920,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-1920w.webp",
  width: 1920,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-2048w.jpg",
  width: 2048,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-2048w.webp",
  width: 2048,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-3840w.jpg",
  width: 3840,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-3840w.webp",
  width: 3840,
  format: 'webp'
}];
export default {
  imageTypes: [
    'jpeg',
    'webp'
  ],
  availableWidths: [
    640,
    750,
    828,
    1080,
    1200,
    1920,
    2048,
    3840
  ],
  aspectRatio: 1.5,
  imageUrlFor: (w, f) => findMatchingImage(images, w, f ?? 'jpeg')?.url,
  lqip: {
    inlineStyles: inlineStyles
  }
}"
`;

exports[`LQIP > thumbhash LQIP is supported 1`] = `
"import { findMatchingImage } from '@responsive-image/core';
import { decode2url } from '@responsive-image/core/thumbhash/decode';
const images = [{
  url: __webpack_public_path__ + "assets/image-640w.jpg",
  width: 640,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-640w.webp",
  width: 640,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-750w.jpg",
  width: 750,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-750w.webp",
  width: 750,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-828w.jpg",
  width: 828,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-828w.webp",
  width: 828,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-1080w.jpg",
  width: 1080,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-1080w.webp",
  width: 1080,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-1200w.jpg",
  width: 1200,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-1200w.webp",
  width: 1200,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-1920w.jpg",
  width: 1920,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-1920w.webp",
  width: 1920,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-2048w.jpg",
  width: 2048,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-2048w.webp",
  width: 2048,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-3840w.jpg",
  width: 3840,
  format: 'jpeg'
},{
  url: __webpack_public_path__ + "assets/image-3840w.webp",
  width: 3840,
  format: 'webp'
}];
export default {
  imageTypes: [
    'jpeg',
    'webp'
  ],
  availableWidths: [
    640,
    750,
    828,
    1080,
    1200,
    1920,
    2048,
    3840
  ],
  aspectRatio: 1.5,
  imageUrlFor: (w, f) => findMatchingImage(images, w, f ?? 'jpeg')?.url,
  lqip: {
    bgImage: () => decode2url('jJcFFYI1fIWHe4dweXlYeUaAmWj3', 100, 67),
    attribute: 'th:jJcFFYI1fIWHe4dweXlYeUaAmWj3'
  }
}"
`;

exports[`custom loader options are supported 1`] = `
"import { findMatchingImage } from '@responsive-image/core';
const images = [{
  url: '"https:/cdn.example.com/images/test-100.png"',
  width: 100,
  format: 'png'
},{
  url: '"https:/cdn.example.com/images/test-200.png"',
  width: 200,
  format: 'png'
}];
export default {
  imageTypes: [
    'png'
  ],
  availableWidths: [
    100,
    200
  ],
  aspectRatio: 1.5,
  imageUrlFor: (w, f) => findMatchingImage(images, w, f ?? 'png')?.url,
  lqip: undefined
}"
`;

exports[`custom query params are supported 1`] = `
"import { findMatchingImage } from '@responsive-image/core';
const images = [{
  url: __webpack_public_path__ + "assets/image-100w.png",
  width: 100,
  format: 'png'
},{
  url: __webpack_public_path__ + "assets/image-200w.png",
  width: 200,
  format: 'png'
}];
export default {
  imageTypes: [
    'png'
  ],
  availableWidths: [
    100,
    200
  ],
  aspectRatio: 1.5,
  imageUrlFor: (w, f) => findMatchingImage(images, w, f ?? 'png')?.url,
  lqip: undefined
}"
`;

exports[`different aspect ratio 1`] = `
"import { findMatchingImage } from '@responsive-image/core';
const images = [{
  url: __webpack_public_path__ + "assets/image-100w.png",
  width: 100,
  format: 'png'
},{
  url: __webpack_public_path__ + "assets/image-200w.png",
  width: 200,
  format: 'png'
}];
export default {
  imageTypes: [
    'png'
  ],
  availableWidths: [
    100,
    200
  ],
  aspectRatio: 0.6666666666666666,
  imageUrlFor: (w, f) => findMatchingImage(images, w, f ?? 'png')?.url,
  lqip: undefined
}"
`;

exports[`imagetools params are supported 1`] = `
"import { findMatchingImage } from '@responsive-image/core';
const images = [{
  url: __webpack_public_path__ + "assets/image-100w.png",
  width: 100,
  format: 'png'
},{
  url: __webpack_public_path__ + "assets/image-200w.png",
  width: 200,
  format: 'png'
}];
export default {
  imageTypes: [
    'png'
  ],
  availableWidths: [
    100,
    200
  ],
  aspectRatio: 1.5,
  imageUrlFor: (w, f) => findMatchingImage(images, w, f ?? 'png')?.url,
  lqip: undefined
}"
`;

exports[`it produces expected output 1`] = `
"import { findMatchingImage } from '@responsive-image/core';
const images = [{
  url: __webpack_public_path__ + "assets/image-640w.png",
  width: 640,
  format: 'png'
},{
  url: __webpack_public_path__ + "assets/image-640w.webp",
  width: 640,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-750w.png",
  width: 750,
  format: 'png'
},{
  url: __webpack_public_path__ + "assets/image-750w.webp",
  width: 750,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-828w.png",
  width: 828,
  format: 'png'
},{
  url: __webpack_public_path__ + "assets/image-828w.webp",
  width: 828,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-1080w.png",
  width: 1080,
  format: 'png'
},{
  url: __webpack_public_path__ + "assets/image-1080w.webp",
  width: 1080,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-1200w.png",
  width: 1200,
  format: 'png'
},{
  url: __webpack_public_path__ + "assets/image-1200w.webp",
  width: 1200,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-1920w.png",
  width: 1920,
  format: 'png'
},{
  url: __webpack_public_path__ + "assets/image-1920w.webp",
  width: 1920,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-2048w.png",
  width: 2048,
  format: 'png'
},{
  url: __webpack_public_path__ + "assets/image-2048w.webp",
  width: 2048,
  format: 'webp'
},{
  url: __webpack_public_path__ + "assets/image-3840w.png",
  width: 3840,
  format: 'png'
},{
  url: __webpack_public_path__ + "assets/image-3840w.webp",
  width: 3840,
  format: 'webp'
}];
export default {
  imageTypes: [
    'png',
    'webp'
  ],
  availableWidths: [
    640,
    750,
    828,
    1080,
    1200,
    1920,
    2048,
    3840
  ],
  aspectRatio: 1.5,
  imageUrlFor: (w, f) => findMatchingImage(images, w, f ?? 'png')?.url,
  lqip: undefined
}"
`;
